--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -321,7 +321,7 @@ ul  {
     
 }
 
-.home2 img, .coffee1 img, .ethi img, .surv img, .pers img {
+.home2 img, .coffee1 img, .ethi img, .surv img, .pers img, .wires img {
     margin-top: 100px;
     width: 100%;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -333,7 +333,7 @@ ul  {
 }
 
 .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-.peets p, .cbtl p, .mcnt p, .stylec, .flow p {
+.peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p {
     margin-top: 20px;
     text-align: center;
     line-height: 140%;
@@ -375,6 +375,20 @@ ul  {
     
 }
 
+.wires img {
+    margin: 0 1%;
+}
+
+.wires img:nth-child(1) {
+    width: 30%;
+} 
+.wires img:nth-child(2) {
+    width: 33%;
+}
+.wires img:nth-child(3) {
+    width: 27%;
+}
+
 .comp {
     grid-area: comp;
     margin: 90px 0px 10px;        ;
@@ -397,7 +411,7 @@ ul  {
     margin: 100px 0px;
 }
 
-.flow p {
+.flow p, .wires p {
     margin-top: 40px;
     padding: 0 20%;
 }
@@ -1015,7 +1029,7 @@ ul  {
     }
     
    .home2 p, .coffee1 p, .ethi p, .surv p, .pers p,
-   .peets p, .cbtl p, .mcnt p, .stylec, .flow p {
+   .peets p, .cbtl p, .mcnt p, .stylec, .flow p, .wires p {
        line-height: 130%;
        font-size: 14px;
     }
@@ -1027,6 +1041,31 @@ ul  {
     
     .peets, .cbtl, .mcnt, .wires {
         margin: 20px 0px;
+    }
+    
+    .wires img {
+        margin: 5% 0;
+        width: 100%;
+        
+    }
+    
+    .wires img:nth-child(1) {
+    width: 100%;
+} 
+.wires img:nth-child(2) {
+    width: 100%;
+}
+.wires img:nth-child(3) {
+    width: 100%;
+}
+    
+    .flow p, .wires p {
+        padding: 0;
+    }
+    
+    .wires p {
+        margin-top: 0;
+        margin-bottom: 30px;
     }
     
     .abpic {
