--- a/assets/contact.css
+++ b/assets/contact.css
@@ -99,6 +99,7 @@ input, textarea, .send-button {
      padding-left: 20px;
      font-size: 24px;
      resize: none;
+     box-shadow: none !important;
 }
 
 ::placeholder {
