--- a/assets/contact.css
+++ b/assets/contact.css
@@ -100,6 +100,9 @@ input, textarea, .send-button {
      font-size: 24px;
      resize: none;
      box-shadow: none !important;
+    -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 ::placeholder {
