--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -143,6 +143,7 @@ ul  {
     grid-area: csnav;
     justify-self: center;
     margin: 60px 0px 50px;
+       
     
 }
 
@@ -193,10 +194,13 @@ ul  {
     padding: 4px 0px 7px;
     opacity: .95;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    transition: all .2s linear;
 }
 
+.sticky li {
+    transition: all .2s linear;
 
-
+}
 
 
 
@@ -996,7 +1000,12 @@ ul  {
      }
     
     .ban {
-        margin: 0px -20px -110px 0px;
+       margin: 0px 0px -130px -20px;
+       z-index: -1;
+    }
+    
+    .dlogo img {
+    margin-top: 15px;
     }
     
     .csnav ul {
