--- a/assets/showbuddy.css
+++ b/assets/showbuddy.css
@@ -190,6 +190,11 @@ ul  {
     padding: 4px 0px 7px;
     opacity: .95;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    transition: all .2s linear;
+}
+
+.sticky li {
+    transition: all .2s linear;
 }
 
 
