--- a/assets/style.css
+++ b/assets/style.css
@@ -598,7 +598,7 @@ p {
     .hovbutton {
         margin: 0 20%;
         padding: 8px 0px;
-        border-width: 2px;
+        border-width: 1px;
     }
     
      .footlogo img {
@@ -738,6 +738,7 @@ p {
     
     .name {
         margin-top: 60px;
+        margin-bottom: 4px;
     }
     
     .subname {
@@ -838,7 +839,7 @@ p {
     
     .hovtext p {
         margin-top: 0%;
-        margin-bottom: 8%;
+        margin-bottom: 9%;
     }
     
   
